@@ -34,6 +34,7 @@ $ -> Language fix or change
  # [#30632] *Menu item Alias required setting. Thanks Jean-Marie Simonet.
  # [#29957] Administrator interface dropdown menus not working on tablets. Thanks Denia Si.
  # [#30660] Corrects font-file stack order. Thanks Seth Warburton.
+ # [#30668] *Beez3 missing JHtml::_('behavior.caption');. Thanks Jean-Marie Simonet.
 
 -------------------- 3.1.0 Stable Release [24-Apr-2013] ------------------
 
